cluster/apps/character-sites/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: character-sites
  namespace: kloud-apps
spec:
  type: ClusterIP
  selector:
    app: character-sites
  ports:
    - port: 80
      targetPort: 80
